doc/api_assets/style.css
/* ... */
.icon {
  cursor: pointer;
}

.dark-icon {
  display: block;
}

.light-icon {
  fill: var(--white);
  display: none;
}

.dark-mode {
  color-scheme: dark;
}

.dark-mode .dark-icon {
  display: none;
}

.dark-mode .light-icon {
  fill: var(--white);
  display: block;
}

.js-flavor-selector {
  -webkit-appearance: none;
  appearance: none;
  float: right;
  background-image: url(./js-flavor-cjs.svg);
  background-size: contain;
  background-repeat: no-repeat;
  width: 142px;
  height: 20px;
}
.js-flavor-selector:checked {
  background-image: url(./js-flavor-esm.svg);
}
.js-flavor-selector:not(:checked) ~ .mjs,
.js-flavor-selector:checked ~ .cjs {
  display: none;
}
.dark-mode .js-flavor-selector {
  filter: invert(1);
}
@supports (aspect-ratio: 1 / 1) {
  .js-flavor-selector {
    height: 1.5em;
    width: auto;
    aspect-ratio: 2719 / 384;
  }
}

@media print {
  html {
    height: auto;
    font-size: .75em;
  }
  #column2.interior {
    display: none;
  }
  #column1.interior {
    margin-left: 0;
    padding: 0;
    overflow-y: auto;
  }
  .api_metadata,
  #toc,
  .srclink,
  #gtoc,
  .mark {
    display: none;
  }
  h1 {
    font-size: 2rem;
  }
  h2 {
    font-size: 1.75rem;
  }
  h3 {
    font-size: 1.5rem;
  }
  h4 {
    font-size: 1.3rem;
  }
  h5 {
    font-size: 1.2rem;
  }
  h6 {
    font-size: 1.1rem;
  }
  .api_stability {
    display: inline-block;
  }
  .api_stability a {
    text-decoration: none;
  }
  a {
    color: inherit;
  }
  #apicontent {
    overflow: hidden;
  }
  .js-flavor-selector {
    display: none;
  }
  .js-flavor-selector + * {
    margin-bottom: 2rem;
    padding-bottom: 2rem;
    border-bottom: 1px solid var(--color-text-primary);
  }
  .js-flavor-selector ~ * {
    display: block !important;
    background-position: top right;
    background-size: 142px 20px;
    background-repeat: no-repeat;
  }
  .js-flavor-selector ~ .cjs {
    background-image: url(./js-flavor-cjs.svg);
  }
  .js-flavor-selector ~ .mjs {
    background-image: url(./js-flavor-esm.svg);
  }
}

